# chatty

./: .gitignore  BUILDING.md  Cargo.toml  Justfile  Makefile  README.md  buf.yaml  dprint.json
.github/workflows/: ci.yml  release.yml
.github/workflows/scripts/: detect_release.py
.zed/: settings.json
crates/chatty_client_core/: Cargo.toml  build.rs
crates/chatty_client_core/src/: lib.rs  server_endpoint.rs
crates/chatty_client_gui/: Cargo.toml  build.rs  icons-collection.md
crates/chatty_client_gui/assets/app-icons/: chatty.icns
crates/chatty_client_gui/locales/: en-US.yml
crates/chatty_client_gui/packaging/linux/: README.md  chatty.desktop
crates/chatty_client_gui/src/: assets.rs  main.rs  theme.rs
crates/chatty_client_gui/src/app/: assets.rs  identities.rs  images.rs  message.rs  message_format.rs  mod.rs  model.rs  net.rs  room.rs  run.rs  services.rs  split.rs  state.rs  subscription.rs  types.rs  update.rs  view_models.rs  vim.rs
crates/chatty_client_gui/src/app/features/: mod.rs
crates/chatty_client_gui/src/app/features/chat/: mod.rs  pane.rs
crates/chatty_client_gui/src/app/features/layout/: mod.rs
crates/chatty_client_gui/src/app/features/overlays/: confirm.rs  join.rs  layout.rs  message_action.rs  mod.rs
crates/chatty_client_gui/src/app/features/settings/: mod.rs  view.rs
crates/chatty_client_gui/src/app/features/tabs/: mod.rs  model.rs
crates/chatty_client_gui/src/app/features/toaster/: mod.rs
crates/chatty_client_gui/src/app/features/users/: mod.rs  view.rs
crates/chatty_client_gui/src/app/features/window/: mod.rs  model.rs
crates/chatty_client_gui/src/app/update/: chat.rs  input.rs  layout.rs  mod.rs  nav.rs  net.rs  pane.rs  settings.rs  tabs.rs
crates/chatty_client_gui/src/net/: api.rs  backend.rs  controller.rs  mod.rs  reconnect.rs  subscriptions.rs  types.rs
crates/chatty_client_gui/src/settings/: mod.rs  oauth.rs  persistence.rs  secrets.rs  types.rs
crates/chatty_client_gui/src/ui/: app_state.rs  badges.rs  layout.rs  main_view.rs  main_window.rs  mod.rs  net.rs  popped_view.rs  reducer.rs  settings.rs  settings_view.rs  tab_view.rs  theme.rs  topbar.rs  users_view.rs  vim.rs
crates/chatty_client_gui/src/ui/components/: chat_input.rs  chat_message.rs  chat_pane.rs  join_dialog.rs  message_list.rs  mod.rs  rename_dialog.rs  resize_handle.rs  room.rs  split_controls.rs  split_header.rs  split_messages.rs  split_resize.rs  split_sizing.rs  tab.rs  tab_strip.rs  toaster.rs  topbar.rs  window.rs
crates/chatty_client_gui/src/ui/features/: mod.rs
crates/chatty_client_gui/src/ui/features/chat/: message.rs  mod.rs  pane.rs
crates/chatty_client_gui/src/ui/features/overlays/: confirm.rs  join.rs  layout.rs  message_action.rs  mod.rs  overlay.rs
crates/chatty_client_gui/src/ui/features/settings/: accounts.rs  diagnostics.rs  general.rs  keybinds.rs  mod.rs  server.rs
crates/chatty_client_gui/src/ui/features/toaster/: mod.rs
crates/chatty_client_gui/src/ui/features/users/: mod.rs  view.rs
crates/chatty_client_gui/src/ui/modals/: confirm.rs  join.rs  layout.rs  message_action.rs  mod.rs  overlay.rs
crates/chatty_client_gui/src/ui/pages/: main_page.rs  mod.rs  users_page.rs
crates/chatty_client_gui/src/ui/pages/settings_page/: accounts.rs  diagnostics.rs  general.rs  mod.rs  server.rs  sidebar.rs
crates/chatty_client_gui/src/ui/settings/: accounts.rs  diagnostics.rs  general.rs  keybinds.rs  mod.rs  server.rs
crates/chatty_client_ui/: Cargo.toml
crates/chatty_client_ui/src/: app_state.rs  lib.rs  net.rs  settings.rs
crates/chatty_domain/: Cargo.toml
crates/chatty_domain/src/: lib.rs
crates/chatty_platform/: Cargo.toml
crates/chatty_platform/src/: lib.rs
crates/chatty_platform/src/assets/: bttv.rs  cache.rs  common.rs  ffz.rs  kick.rs  mod.rs  seventv.rs  twitch.rs
crates/chatty_platform/src/assets/seventv/: event_api.rs  gql.rs  mod.rs  types.rs
crates/chatty_platform/src/kick/: adapter.rs  client.rs  mod.rs  public_key.pem
crates/chatty_platform/src/twitch/: adapter.rs  mod.rs
crates/chatty_platform/src/twitch/eventsub/: mod.rs
crates/chatty_platform/src/twitch/helix/: mod.rs
crates/chatty_platform/src/twitch/notifications/: handlers.rs  mod.rs  moderation.rs  room_state.rs  tests.rs
crates/chatty_protocol/: Cargo.toml  build.rs
crates/chatty_protocol/src/: framing.rs  lib.rs
crates/chatty_protocol/tests/: framing_tests.rs
crates/chatty_server/: Cargo.toml
crates/chatty_server/config/: chatty_server.toml.example
crates/chatty_server/migrations/mysql/: 20260116_extend.sql  20260116_init.sql
crates/chatty_server/migrations/postgres/: 20260116_extend.sql  20260116_init.sql
crates/chatty_server/migrations/sqlite/: 20260116_extend.sql  20260116_init.sql
crates/chatty_server/src/: main.rs
crates/chatty_server/src/adapters/: demo.rs  mod.rs  null.rs
crates/chatty_server/src/config/: mod.rs
crates/chatty_server/src/quic/: config.rs
crates/chatty_server/src/server/: adapter_manager.rs  adapter_manager_tests.rs  audit.rs  auth.rs  connection.rs  health.rs  mod.rs  quic_demo_adapter_tests.rs  replay.rs  room_hub.rs  room_hub_tests.rs  router.rs  state.rs
crates/chatty_server/src/util/: mod.rs  time.rs
crates/chatty_server/tests/: quic_smoke.rs
crates/chatty_util/: Cargo.toml
crates/chatty_util/src/: lib.rs
docker/: .env.example  Caddyfile  Dockerfile.server  Dockerfile.web  README.md  docker-compose.observability.yml  docker-compose.yml
docker/observability/: grafana-dashboard.json  grafana-dashboards.yaml  prometheus-alerts.yaml  prometheus.yml
docker/server-config/: config.toml
proto/: chatty.proto
tools/: i18n_audit.py
web/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
web/src/pages/: index.astro  kick.astro  twitch.astro
web/src/pages/api/kick/: callback.ts  login.ts  lookup.ts
web/src/pages/api/twitch/: callback.ts  login.ts
web/src/styles/: globals.css
