[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GNU AGPLv3"

[workspace.dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }

metrics = "0.24"
metrics-exporter-prometheus = "0.18"
quinn = "0.11"
rustls = { version = "0.23", default-features = true }
rustls-pemfile = "2.2"

bytes = "1.7"
prost = "0.14"
prost-types = "0.14"

dirs = "6.0"
rust-embed = "8.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

anyhow = "1.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
thiserror = "2.0"
uuid = { version = "1.19", features = ["v4", "serde"] }

opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "sqlite", "postgres", "mysql", "migrate"] }

proptest = "1.9"

[profile.release-with-debug]
inherits = "release"
debug = 1
