[package]
name = "chatty_client_gui"
version = "0.2.0"
build = "build.rs"
edition.workspace = true
license.workspace = true

[dependencies]
chatty_client_core = { path = "../chatty_client_core" }
chatty_client_ui = { path = "../chatty_client_ui" }
chatty_domain = { path = "../chatty_domain" }
chatty_protocol = { path = "../chatty_protocol" }
chatty_util = { path = "../chatty_util" }

anyhow.workspace = true
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

dirs = { workspace = true }
iced = { version = "0.14", features = ["image", "selector", "svg", "tokio", "advanced"] }
lru = "0.16"
open = "5.3"
reqwest = { version = "0.13", features = ["native-tls"] }
rfd = "0.17"
rust-embed = { workspace = true, features = ["compression", "include-exclude"] }
rust-i18n = "3.1.5"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.24"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "chatty"
path = "src/main.rs"

[package.metadata.bundle]
name = "Chatty"
identifier = "com.chatty.client"
icon = ["assets/app-icons/chatty.icns"]
resources = ["assets/app-icons"]
category = "public.app-category.social-networking"
