[package]
name = "chatty_client_ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chatty_client_core = { path = "../chatty_client_core" }
chatty_domain = { path = "../chatty_domain" }
chatty_protocol = { path = "../chatty_protocol" }
chatty_util = { path = "../chatty_util" }

anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

keyring = "3.6"
rand = "0.9"
rust-i18n = "3.1"

[dev-dependencies]
tempfile = "3.24"
